# Beliefsync

./: .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  README.zh-CN.md  ROADMAP.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
docs/: architecture.md  belief_model.md  cli.md  integration.md
examples/: beliefsync.example.json  demo_events.json  demo_issue.md  demo_test_log.txt
src/beliefsync/: __init__.py  cli.py  config.py  detector.py  engine.py  extractors.py  llm.py  models.py  planner.py  repo_events.py  reporting.py  store.py  validation.py  workspace.py
src/beliefsync/adapters/: __init__.py  base.py  openhands.py  swe_agent.py
tests/: test_cli_workflow.py  test_detector.py  test_engine.py  test_llm.py  test_planner.py  test_repo_events.py  test_reporting.py  test_validation.py  test_workspace.py
