[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "beliefsync"
version = "0.1.0"
description = "A repository-state belief and sync layer for coding agents."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "BeliefSync Contributors" }
]
keywords = ["coding-agents", "software-engineering", "llm", "belief-tracking", "agent-reliability"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development",
  "Topic :: Scientific/Engineering :: Artificial Intelligence"
]

[project.urls]
Homepage = "https://github.com/xiao-zi-chen/Beliefsync"
Repository = "https://github.com/xiao-zi-chen/Beliefsync"
Issues = "https://github.com/xiao-zi-chen/Beliefsync/issues"

[project.scripts]
beliefsync = "beliefsync.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
